tests/files/parser_tests/should_fail/049.cmdr
//Should not parse incorrect variable initialization
x: = 3;